Add Normalize.css file

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>X Ten Realty</title>
   </head>
   <body>
 
     <header>
+      <div>
+        <img src="Assets/SVGs/TEN-logo.svg" alt="Company Logo" />
+      </div>
+      <div>
+        <nav>
+          <h4>Contact</h4>
+          <h4>Account</h4>
+        </nav>
+        <nav>
+          <h3></h3>
+        </nav>
+      </div>
     </header>
 
     <main>
