--- a/index.html
+++ b/index.html
@@ -15,16 +15,57 @@
       </div>
       <div>
         <nav>
-          <h4>Contact</h4>
-          <h4>Account</h4>
+          <ul>
+            <li><img src="Assets/SVGs/contact.svg" alt="phone icon"/>Contact</li>
+            <li><img src="Assets/SVGs/account.svg" alt="person icon"/>Account</li>
+          </ul>
         </nav>
         <nav>
-          <h3></h3>
+          <ul>
+            <li>search</li>
+            <li>communities</li>
+            <li>services</li>
+            <li>about us</li>
+        </ul>
         </nav>
       </div>
     </header>
 
-    <main>
+  <main>
+    <nav>
+      <input />
+      <button>Search</button>
+      <ul>
+        <li>new listings</li>
+        <li>open houses</li>
+        <li>map search</li>
+      </ul>
+    </nav>
+
+    <section>
+      <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith">
+      <div>
+        <h2>Jane Smith</h2>
+        <h4>REALTOR&#174;</h4>
+        <button>Contact Me</button>
+        <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
+        <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
+        <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
+        <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
+        <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+      </div>
+
+    <nav>
+      <ul>
+        <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
+        <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
+        <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
+        <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
+      <ul>
+    </nav>
+    </section>
+
+
     </main>
 
     <footer>
