--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>X Ten Realty</title>
+    <title>TEN Realty</title>
   </head>
   <body>
 
@@ -31,44 +31,91 @@
       </div>
     </header>
 
-  <main>
-    <nav>
-      <input />
-      <button>Search</button>
-      <ul>
-        <li>new listings</li>
-        <li>open houses</li>
-        <li>map search</li>
-      </ul>
-    </nav>
+    <main>
+      <nav>
+        <input />
+        <button>Search</button>
+        <ul>
+          <li>new listings</li>
+          <li>open houses</li>
+          <li>map search</li>
+        </ul>
+      </nav>
 
-    <section>
-      <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith">
-      <div>
-        <h2>Jane Smith</h2>
-        <h4>REALTOR&#174;</h4>
-        <button>Contact Me</button>
-        <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
-        <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
-        <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
-        <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
-        <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
-      </div>
+      <section>
+        <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith">
+        <div>
+          <h2>Jane Smith</h2>
+          <h4>REALTOR&#174;</h4>
+          <button>Contact Me</button>
+          <nav>
+            <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
+            <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
+            <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
+            <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
+            <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+          </nav>
+        </div>
 
-    <nav>
-      <ul>
-        <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
-        <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
-        <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
-        <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
-      <ul>
-    </nav>
-    </section>
+      <nav>
+        <ul>
+          <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
+          <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
+          <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
+          <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
+        <ul>
+      </nav>
+      </section>
 
+      <section>
 
+        <nav>
+          <ul>
+            <li>About Me</li>
+            <li>My Listings</li>
+            <li>My Solds</li>
+            <li>Testimonials</li>
+          </ul>
+        </nav>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultricies nisi nibh, sit amet varius dolor tempus quis. Nunc sapien lectus, posuere id lectus in, volutpat dictum velit. Nam quis dui lectus. Integer ornare consequat molestie. Curabitur dictum odio quis ullamcorper placerat. Suspendisse potenti. Duis dapibus mi quis augue finibus aliquam. Nunc viverra ante ac ipsum interdum posuere. Proin in sagittis eros, nec porttitor quam. Morbi eu condimentum mi. Nullam cursus erat vitae lacus sodales sollicitudin. Suspendisse faucibus mi non augue euismod hendrerit. Morbi non porttitor sapien. Curabitur ut erat bibendum, accumsan tellus at, gravida augue. Donec lacinia quam imperdiet enim tempus, id pulvinar nisl commodo. Sed eget pellentesque ante. Etiam ultrices placerat eros eget bibendum. Vivamus maximus, tortor et gravida lacinia, tellus purus dictum tellus, quis dictum nunc tellus non metus. Fusce viverra blandit sem in suscipit. Ut aliquam dolor vel felis placerat mollis. Integer laoreet malesuada leo ut mattis. Nam posuere vitae risus nec feugiat. Maecenas risus est, consectetur ut risus a, cursus posuere arcu.
+        </p>
+
+        <div>
+          <h3>LANGUAGE</h3>
+          <p>Deutch, Finnish, Spannish</p>
+          <h3>DESIGNATIONS</h3>
+          <p>CRS, GRI, CNE</p>
+        </div>
+      </section>
     </main>
 
     <footer>
+      <div class="contact-info">
+        <p><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>1-800-234-4567</p>
+        <p>5678 Main Street, Denver, CO 80123</p>
+        <nav>
+          <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
+          <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
+          <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
+          <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
+          <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+        </nav>
+      </div>
+
+      <div>
+        <ul>
+          <li>Site Map</li>
+          <li>Terms of Use</li>
+          <li>Privacy Policy</li>
+        </ul>
+        <p>&#169;2016 TEN Realty. All Rights Reserved.</p>
+        <div>
+          <img src="Assets/SVGs/realtor.svg" alt="Realtor Icon" />
+          <img src="Assets/SVGs/equal-housing.svg" alt="Equal Housing Icon" />
+        </div>
+      </div>
+
     </footer>
 
   </body>
