--- a/index.html
+++ b/index.html
@@ -33,43 +33,46 @@
     </header>
 
     <main>
-      <nav class="secondary-nav">
-        <input placeholder="Address, City, Zip, or MLS#"/>
-        <button class="search">Search</button>
-        <ul>
-          <li>new listings</li>
-          <li>open houses</li>
-          <li>map search</li>
-        </ul>
-      </nav>
+      <div class="secondary-nav-container">
+        <nav class="secondary-nav">
+          <input placeholder="Address, City, Zip, or MLS#"/>
+          <button class="search">Search</button>
+          <ul>
+            <li>new listings</li>
+            <li>open houses</li>
+            <li>map search</li>
+          </ul>
+        </nav>
+      </div>
 
-      <section class="banner">
-        <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith">
-        <div>
-          <h2 class="status">Jane Smith</h2>
-          <h4>REALTOR&#174;</h4>
-          <button class="contact-me">Contact Me</button>
+      <div class="banner-container">
+        <section class="banner">
+          <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith">
+          <div>
+            <h2 class="status">Jane Smith</h2>
+            <h4>REALTOR&#174;</h4>
+            <button class="contact-me">Contact Me</button>
+            <nav>
+              <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
+              <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
+              <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
+              <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
+              <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+            </nav>
+          </div>
+
           <nav>
-            <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
-            <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
-            <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
-            <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
-            <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+            <ul>
+              <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
+              <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
+              <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
+              <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
+            <ul>
           </nav>
-        </div>
-
-      <nav>
-        <ul>
-          <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
-          <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
-          <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
-          <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
-        <ul>
-      </nav>
-      </section>
+        </section>
+      </div>
 
       <section class="profile-details">
-
         <nav class="profile-nav">
           <ul>
             <li>About Me</li>
@@ -91,33 +94,34 @@
       </section>
     </main>
 
-    <footer>
-      <div class="contact-info">
-        <p><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>1-800-234-4567</p>
-        <p>5678 Main Street, Denver, CO 80123</p>
-        <nav>
-          <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
-          <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
-          <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
-          <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
-          <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
-        </nav>
-      </div>
-
-      <div>
-        <ul>
-          <li>Site Map</li>
-          <li>Terms of Use</li>
-          <li>Privacy Policy</li>
-        </ul>
-        <p>&#169;2016 TEN Realty. All Rights Reserved.</p>
-        <div>
-          <img src="Assets/SVGs/realtor.svg" alt="Realtor Icon" />
-          <img src="Assets/SVGs/equal-housing.svg" alt="Equal Housing Icon" />
+    <div class="footer-container">
+      <footer>
+        <div class="contact-info">
+          <p><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>1-800-234-4567</p>
+          <p>5678 Main Street, Denver, CO 80123</p>
+          <nav>
+            <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
+            <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
+            <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
+            <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
+            <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+          </nav>
         </div>
-      </div>
 
-    </footer>
+        <div>
+          <ul>
+            <li>Site Map</li>
+            <li>Terms of Use</li>
+            <li>Privacy Policy</li>
+          </ul>
+          <p>&#169;2016 TEN Realty. All Rights Reserved.</p>
+          <div>
+            <img src="Assets/SVGs/realtor.svg" alt="Realtor Icon" />
+            <img src="Assets/SVGs/equal-housing.svg" alt="Equal Housing Icon" />
+          </div>
+        </div>
+      </footer>
+    </div>
 
   </body>
 </html>
