--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <div>
         <img src="Assets/SVGs/TEN-logo.svg" alt="Company Logo" class="company-logo"/>
       </div>
-      <div>
-        <nav class="top-nav">
-          <ul>
-            <li><img src="Assets/SVGs/contact.svg" alt="phone icon"/>Contact</li>
-            <li><img src="Assets/SVGs/account.svg" alt="person icon"/>Account</li>
+      <div class="top-nav-container">
+        <nav>
+          <ul class="top-nav-ul">
+            <li class="top-nav-btn"><img src="Assets/SVGs/contact.svg" alt="phone icon"/><p class="top-nav-text"/><p>Contact</p></li>
+            <li class="top-nav-btn"><img src="Assets/SVGs/account.svg" alt="person icon"/><p>Account</p></li>
           </ul>
         </nav>
-        <nav class="primary-nav">
-          <ul>
+        <nav>
+          <ul class="primary-nav">
             <li>search</li>
             <li>communities</li>
             <li>services</li>
