Style remaining banner area

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </nav>
       </div>
 
-
       <div class="banner-container">
         <section class="banner">
           <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith" class="photo">
@@ -62,16 +61,20 @@
             </nav>
           </div>
 
-          <nav>
+
+
+          <nav class="contact-details">
             <ul>
-              <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>530.830.2150</li>
-              <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/>Visit my website</li>
-              <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/>Denver Office</li>
-              <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/>eNewsletter Sign Up</li>
+              <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/ class="phone-icon"><span class="phone-no">530.830.2150</span></li>
+              <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/><a>Visit my website</a></li>
+              <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/><a>Denver Office</a></li>
+              <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/><a>eNewsletter Sign Up</a></li>
             <ul>
           </nav>
         </section>
       </div>
+
+
 
       <section class="profile-details">
         <nav class="profile-nav">
