--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:400,600,700" rel="stylesheet">
+    <html lang="en-us">
     <title>TEN Realty</title>
   </head>
   <body>
@@ -61,8 +62,6 @@
             </nav>
           </div>
 
-
-
           <nav class="contact-details">
             <ul>
               <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/ class="phone-icon"><span class="phone-no">530.830.2150</span></li>
@@ -77,6 +76,7 @@
 
 
       <section class="profile-details">
+        
         <nav class="profile-nav">
           <ul>
             <li>About Me</li>
@@ -85,6 +85,8 @@
             <li>Testimonials</li>
           </ul>
         </nav>
+
+
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultricies nisi nibh, sit amet varius dolor tempus quis. Nunc sapien lectus, posuere id lectus in, volutpat dictum velit. Nam quis dui lectus. Integer ornare consequat molestie. Curabitur dictum odio quis ullamcorper placerat. Suspendisse potenti. Duis dapibus mi quis augue finibus aliquam. Nunc viverra ante ac ipsum interdum posuere. Proin in sagittis eros, nec porttitor quam. Morbi eu condimentum mi. Nullam cursus erat vitae lacus sodales sollicitudin. Suspendisse faucibus mi non augue euismod hendrerit. Morbi non porttitor sapien. Curabitur ut erat bibendum, accumsan tellus at, gravida augue. Donec lacinia quam imperdiet enim tempus, id pulvinar nisl commodo. Sed eget pellentesque ante. Etiam ultrices placerat eros eget bibendum. Vivamus maximus, tortor et gravida lacinia, tellus purus dictum tellus, quis dictum nunc tellus non metus. Fusce viverra blandit sem in suscipit. Ut aliquam dolor vel felis placerat mollis. Integer laoreet malesuada leo ut mattis. Nam posuere vitae risus nec feugiat. Maecenas risus est, consectetur ut risus a, cursus posuere arcu.
         </p>
