Correct icon sizes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="top-nav-container">
         <nav>
           <ul class="top-nav-ul">
-            <li class="top-nav-btn"><img src="Assets/SVGs/contact.svg" alt="phone icon"/><p class="top-nav-text"/><p>Contact</p></li>
-            <li class="top-nav-btn"><img src="Assets/SVGs/account.svg" alt="person icon"/><p>Account</p></li>
+            <li class="top-nav-btn"><img src="Assets/SVGs/contact.svg" alt="phone icon" width="14"/><p class="top-nav-text"/><p>Contact</p></li>
+            <li class="top-nav-btn"><img src="Assets/SVGs/account.svg" alt="person icon" width="14"/><p>Account</p></li>
           </ul>
         </nav>
         <nav>
@@ -54,20 +54,20 @@
             <h4 class="status">REALTOR&#174;</h4>
             <button class="contact-me">Contact Me</button>
             <nav class="social-media">
-              <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" />
-              <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" />
-              <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" />
-              <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" />
-              <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" />
+              <img src="Assets/SVGs/facebook.svg" alt="Facebook Icon" width="12"/>
+              <img src="Assets/SVGs/linkedin.svg" alt="Linkedin Icon" width="20.58"/>
+              <img src="Assets/SVGs/twitter.svg" alt="Twitter Icon" width="21.11"/>
+              <img src="Assets/SVGs/youtube.svg" alt="Youtube Icon" width="19.85"/>
+              <img src="Assets/SVGs/instagram.svg" alt="Instagram Icon" width="23"/>
             </nav>
           </div>
 
           <nav class="contact-details">
             <ul>
-              <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/ class="phone-icon"><span class="phone-no">530.830.2150</span></li>
-              <li><img src="Assets/SVGs/website.svg" alt="Website Icon"/><a>Visit my website</a></li>
-              <li><img src="Assets/SVGs/office.svg" alt="Office Icon"/><a>Denver Office</a></li>
-              <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon"/><a>eNewsletter Sign Up</a></li>
+              <li><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/ width="23.5"><span class="phone-no">530.830.2150</span></li>
+              <li><img src="Assets/SVGs/website.svg" alt="Website Icon" width="25" /><a>Visit my website</a></li>
+              <li><img src="Assets/SVGs/office.svg" alt="Office Icon" width="23" /><a>Denver Office</a></li>
+              <li><img src="Assets/SVGs/enewsletter.svg" alt="Newsletter Icon" width="24"/><a>eNewsletter Sign Up</a></li>
             <ul>
           </nav>
         </section>
@@ -76,7 +76,7 @@
 
 
       <section class="profile-details">
-        
+
         <nav class="profile-nav">
           <ul>
             <li>About Me</li>
