Style footer icons

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
     <div class="footer-container">
       <footer>
         <div class="contact-info">
-          <p><img src="Assets/SVGs/contact.svg" alt="Phone Icon"/>1-800-234-4567</p>
+          <p><img src="Assets/SVGs/contact-white.svg" alt="Phone Icon" width="14"/>1-800-234-4567</p>
           <p>5678 Main Street, Denver, CO 80123</p>
-          <nav>
-            <img src="Assets/SVGs/facebook-white.svg" alt="Facebook Icon" />
-            <img src="Assets/SVGs/linkedin-white.svg" alt="Linkedin Icon" />
-            <img src="Assets/SVGs/twitter-white.svg" alt="Twitter Icon" />
-            <img src="Assets/SVGs/youtube-white.svg" alt="Youtube Icon" />
-            <img src="Assets/SVGs/instagram-white.svg" alt="Instagram Icon" />
+          <nav class="social-media">
+            <img src="Assets/SVGs/facebook-white.svg" alt="Facebook Icon" width="12" />
+            <img src="Assets/SVGs/linkedin-white.svg" alt="Linkedin Icon" width="20.58" />
+            <img src="Assets/SVGs/twitter-white.svg" alt="Twitter Icon" width="21.11" />
+            <img src="Assets/SVGs/youtube-white.svg" alt="Youtube Icon" width="19.85" />
+            <img src="Assets/SVGs/instagram-white.svg" alt="Instagram Icon" width="23" />
           </nav>
         </div>
 
