--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <div class="footer-container">
       <footer>
         <div class="contact-info">
-          <p><img src="Assets/SVGs/contact-white.svg" alt="Phone Icon" width="14"/>1-800-234-4567</p>
-          <p>5678 Main Street, Denver, CO 80123</p>
+          <p class="phone-info"><img src="Assets/SVGs/contact-white.svg" alt="Phone Icon" width="14" class="phone"/>1-800-234-4567</p>
+          <p class="address">5678 Main Street, Denver, CO 80123</p>
           <nav class="social-media">
             <img src="Assets/SVGs/facebook-white.svg" alt="Facebook Icon" width="12" />
             <img src="Assets/SVGs/linkedin-white.svg" alt="Linkedin Icon" width="20.58" />
@@ -119,14 +119,14 @@
           </nav>
         </div>
 
-        <div>
+        <div class="footer-extra">
           <ul>
             <li>Site Map</li>
             <li>Terms of Use</li>
             <li>Privacy Policy</li>
           </ul>
-          <p>&#169;2016 TEN Realty. All Rights Reserved.</p>
-          <div>
+          <p class="rights">&#169;2016 TEN Realty. All Rights Reserved.</p>
+          <div class="footer-icons">
             <img src="Assets/SVGs/realtor.svg" alt="Realtor Icon" width="30.11" />
             <img src="Assets/SVGs/equal-housing.svg" alt="Equal Housing Icon" width="34.24" />
           </div>
