--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <ul class="top-nav-ul">
             <li class="top-nav-btn"><img src="Assets/SVGs/contact.svg" alt="phone icon" width="14"/><p class="top-nav-text"/><p>Contact</p></li>
             <li class="top-nav-btn"><img src="Assets/SVGs/account.svg" alt="person icon" width="14"/><p>Account</p></li>
+            <li class="top-nav-btn"><img src="Assets/SVGs/menu.svg" alt="menu icon" width="14"/><p>Menu</p></li>
           </ul>
         </nav>
         <nav>
