--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
 
       <div class="banner-container">
         <section class="banner">
-          <img src="Assets/Realtor Image/saramortensun.jpg" alt="Professional Photograph of Jane Smith" class="photo">
+          <img src="sara-large.jpg"
+               sizes="(max-width: 992px) 210px,
+                      (max-width: 1200px) 213px,
+                      265px"
+               srcset="Assets/Realtor/sara-xs.jpg 210w,
+                       Assets/Realtor/sara-medium.jpg 213w,
+                       Assets/Realtor/sara-large.jpg 407w"
+               alt="Professional Photograph of Jane Smith"
+               class="photo"
+          />
           <div class="basic-info">
             <h2 class="name">Jane Smith</h2>
             <h4 class="status">REALTOR&#174;</h4>
