Style input field

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input placeholder="Address, City, Zip, or MLS#" class="search-input"/>
           <button class="search">
             <p class="btn-text">Search</p>
-            <img src="Assets/SVGs/search.svg" alt="Search Icon" class="search-icon" />
+            <img src="Assets/SVGs/search.svg" alt="Search Icon" width="24" class="search-icon" />
           </button>
           <ul class="secondary-nav-ul">
             <li>new listings</li>
@@ -96,7 +96,7 @@
 
           <div class="select-menu">
             <p>About Me</p>
-            <img src="Assets/SVGs/angle-down.svg" />
+            <img src="Assets/SVGs/angle-down.svg" width="12" />
           </div>
         </nav>
 
